has_resolved_ref_index flag not restored after resetting entry

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 22
    • Affects Version/s: None
    • Component/s: hotspot
    • b27

      ResolvedMethodEntry::reset_entry() clears the fields in the structure and then restores the constant pool index and the resolved references index if it has one.

      Currently, the resolved references index is restored without restoring the has_resolved_reference flag used by the structure.

            Assignee:
            Matias Saavedra Silva
            Reporter:
            Matias Saavedra Silva
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: