8320530: has_resolved_ref_index flag not restored after resetting entry