src/hotspot/share/oops/resolvedMethodEntry.cpp
@@ -41,7 +41,7 @@ void ResolvedMethodEntry::reset_entry() {
     u2 saved_resolved_references_index = _entry_specific._resolved_references_index;
     u2 saved_cpool_index = _cpool_index;
     memset(this, 0, sizeof(*this));
-    _entry_specific._resolved_references_index = saved_resolved_references_index;
+    set_resolved_references_index(saved_resolved_references_index);
     _cpool_index = saved_cpool_index;
   } else {
     u2 saved_cpool_index = _cpool_index;
